--- a/k8s/overlays/test-cluster/deployment.yaml
+++ b/k8s/overlays/test-cluster/deployment.yaml
@@ -14,6 +14,8 @@ spec:
     spec:
       containers:
       - name: test-app
+        image: my-test-ubuntu-app:latest
+        imagePullPolicy: Never
         securityContext:
           capabilities:
             add:
