--- a/k8s/overlays/test-cluster/kustomization.yaml
+++ b/k8s/overlays/test-cluster/kustomization.yaml
@@ -1,19 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../../base
-images:
-  - name: app
-    newName: my-test-ubuntu-app
-    newTag: "latest"
-    digest: 
-patchesStrategicMerge:
   - deployment.yaml
+
 transformers:
   - |-
     apiVersion: builtin
     kind: NamespaceTransformer
     metadata:
       name: notImportantHere
-      namespace: test-app # set the namespace
+      namespace: test-app
     unsetOnly: true
